fix portletStaticNavigation mobile

--- a/camcomskin/padova/browser/stylesheets/sass/components/_static_tiles_portlets.scss
+++ b/camcomskin/padova/browser/stylesheets/sass/components/_static_tiles_portlets.scss
@@ -72,18 +72,21 @@
     &.portletStaticNavigation {
         .tile-text {
             padding: 20px;
-            display: flex;
-            flex-wrap: wrap;
+
+            .colonna-1-di-4 {
+                @extend .col-md-3;
+            }
 
             h3 {
                 border-bottom: 4px solid #666;
-                padding-bottom: 10px;
                 margin-bottom: 0.75em;
+                margin-top: 0;
+                padding: 15px 0 10px;
             }
 
             ul {
                 margin: 1.5rem 0 !important;
-                padding: 0;
+                padding: 0 0 15px;
                 list-style: none !important;
 
                 li {
@@ -105,13 +108,18 @@
                 }
             }
 
-            [class*='colonna-1-di-'] {
-                &:not(:first-of-type) {
-                    margin-left: 0.5rem;
-                }
+            @media (min-width: 992px) {
+                display: flex;
 
-                &:not(:last-of-type) {
-                    margin-right: 0.5rem;
+                [class*='colonna-1-di-'],
+                [class*='col-md-'] {
+                    &:not(:first-of-type) {
+                        margin-left: 0.5rem;
+                    }
+
+                    &:not(:last-of-type) {
+                        margin-right: 0.5rem;
+                    }
                 }
             }
         }
@@ -187,7 +195,8 @@
         .tile-text {
             @include clearfix;
 
-            [class*='colonna-1-di-'] {
+            [class*='colonna-1-di-'],
+            [class*='col-md-'] {
                 background: #fff;
             }
         }
